--- a/R notebook.ipynb
+++ b/R notebook.ipynb
@@ -9,7 +9,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 4,
             "source": [
                 "summary(cars)"
             ],
@@ -34,7 +34,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 5,
             "source": [
                 "tail(cars)"
             ],
@@ -42,43 +42,6 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/plain": [
-                            "   speed dist\n",
-                            "45 23     54 \n",
-                            "46 24     70 \n",
-                            "47 24     92 \n",
-                            "48 24     93 \n",
-                            "49 24    120 \n",
-                            "50 25     85 "
-                        ],
-                        "text/markdown": [
-                            "\n",
-                            "A data.frame: 6 × 2\n",
-                            "\n",
-                            "| <!--/--> | speed &lt;dbl&gt; | dist &lt;dbl&gt; |\n",
-                            "|---|---|---|\n",
-                            "| 45 | 23 |  54 |\n",
-                            "| 46 | 24 |  70 |\n",
-                            "| 47 | 24 |  92 |\n",
-                            "| 48 | 24 |  93 |\n",
-                            "| 49 | 24 | 120 |\n",
-                            "| 50 | 25 |  85 |\n",
-                            "\n"
-                        ],
-                        "text/latex": [
-                            "A data.frame: 6 × 2\n",
-                            "\\begin{tabular}{r|ll}\n",
-                            "  & speed & dist\\\\\n",
-                            "  & <dbl> & <dbl>\\\\\n",
-                            "\\hline\n",
-                            "\t45 & 23 &  54\\\\\n",
-                            "\t46 & 24 &  70\\\\\n",
-                            "\t47 & 24 &  92\\\\\n",
-                            "\t48 & 24 &  93\\\\\n",
-                            "\t49 & 24 & 120\\\\\n",
-                            "\t50 & 25 &  85\\\\\n",
-                            "\\end{tabular}\n"
-                        ],
                         "text/html": [
                             "<table class=\"dataframe\">\n",
                             "<caption>A data.frame: 6 × 2</caption>\n",
@@ -95,6 +58,43 @@
                             "\t<tr><th scope=row>50</th><td>25</td><td> 85</td></tr>\n",
                             "</tbody>\n",
                             "</table>\n"
+                        ],
+                        "text/latex": [
+                            "A data.frame: 6 × 2\n",
+                            "\\begin{tabular}{r|ll}\n",
+                            "  & speed & dist\\\\\n",
+                            "  & <dbl> & <dbl>\\\\\n",
+                            "\\hline\n",
+                            "\t45 & 23 &  54\\\\\n",
+                            "\t46 & 24 &  70\\\\\n",
+                            "\t47 & 24 &  92\\\\\n",
+                            "\t48 & 24 &  93\\\\\n",
+                            "\t49 & 24 & 120\\\\\n",
+                            "\t50 & 25 &  85\\\\\n",
+                            "\\end{tabular}\n"
+                        ],
+                        "text/markdown": [
+                            "\n",
+                            "A data.frame: 6 × 2\n",
+                            "\n",
+                            "| <!--/--> | speed &lt;dbl&gt; | dist &lt;dbl&gt; |\n",
+                            "|---|---|---|\n",
+                            "| 45 | 23 |  54 |\n",
+                            "| 46 | 24 |  70 |\n",
+                            "| 47 | 24 |  92 |\n",
+                            "| 48 | 24 |  93 |\n",
+                            "| 49 | 24 | 120 |\n",
+                            "| 50 | 25 |  85 |\n",
+                            "\n"
+                        ],
+                        "text/plain": [
+                            "   speed dist\n",
+                            "45 23     54 \n",
+                            "46 24     70 \n",
+                            "47 24     92 \n",
+                            "48 24     93 \n",
+                            "49 24    120 \n",
+                            "50 25     85 "
                         ]
                     },
                     "metadata": {}
@@ -104,7 +104,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 3,
             "source": [
                 "head(cars)"
             ],
@@ -112,43 +112,6 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/plain": [
-                            "  speed dist\n",
-                            "1 4      2  \n",
-                            "2 4     10  \n",
-                            "3 7      4  \n",
-                            "4 7     22  \n",
-                            "5 8     16  \n",
-                            "6 9     10  "
-                        ],
-                        "text/markdown": [
-                            "\n",
-                            "A data.frame: 6 × 2\n",
-                            "\n",
-                            "| <!--/--> | speed &lt;dbl&gt; | dist &lt;dbl&gt; |\n",
-                            "|---|---|---|\n",
-                            "| 1 | 4 |  2 |\n",
-                            "| 2 | 4 | 10 |\n",
-                            "| 3 | 7 |  4 |\n",
-                            "| 4 | 7 | 22 |\n",
-                            "| 5 | 8 | 16 |\n",
-                            "| 6 | 9 | 10 |\n",
-                            "\n"
-                        ],
-                        "text/latex": [
-                            "A data.frame: 6 × 2\n",
-                            "\\begin{tabular}{r|ll}\n",
-                            "  & speed & dist\\\\\n",
-                            "  & <dbl> & <dbl>\\\\\n",
-                            "\\hline\n",
-                            "\t1 & 4 &  2\\\\\n",
-                            "\t2 & 4 & 10\\\\\n",
-                            "\t3 & 7 &  4\\\\\n",
-                            "\t4 & 7 & 22\\\\\n",
-                            "\t5 & 8 & 16\\\\\n",
-                            "\t6 & 9 & 10\\\\\n",
-                            "\\end{tabular}\n"
-                        ],
                         "text/html": [
                             "<table class=\"dataframe\">\n",
                             "<caption>A data.frame: 6 × 2</caption>\n",
@@ -165,11 +128,58 @@
                             "\t<tr><th scope=row>6</th><td>9</td><td>10</td></tr>\n",
                             "</tbody>\n",
                             "</table>\n"
+                        ],
+                        "text/latex": [
+                            "A data.frame: 6 × 2\n",
+                            "\\begin{tabular}{r|ll}\n",
+                            "  & speed & dist\\\\\n",
+                            "  & <dbl> & <dbl>\\\\\n",
+                            "\\hline\n",
+                            "\t1 & 4 &  2\\\\\n",
+                            "\t2 & 4 & 10\\\\\n",
+                            "\t3 & 7 &  4\\\\\n",
+                            "\t4 & 7 & 22\\\\\n",
+                            "\t5 & 8 & 16\\\\\n",
+                            "\t6 & 9 & 10\\\\\n",
+                            "\\end{tabular}\n"
+                        ],
+                        "text/markdown": [
+                            "\n",
+                            "A data.frame: 6 × 2\n",
+                            "\n",
+                            "| <!--/--> | speed &lt;dbl&gt; | dist &lt;dbl&gt; |\n",
+                            "|---|---|---|\n",
+                            "| 1 | 4 |  2 |\n",
+                            "| 2 | 4 | 10 |\n",
+                            "| 3 | 7 |  4 |\n",
+                            "| 4 | 7 | 22 |\n",
+                            "| 5 | 8 | 16 |\n",
+                            "| 6 | 9 | 10 |\n",
+                            "\n"
+                        ],
+                        "text/plain": [
+                            "  speed dist\n",
+                            "1 4      2  \n",
+                            "2 4     10  \n",
+                            "3 7      4  \n",
+                            "4 7     22  \n",
+                            "5 8     16  \n",
+                            "6 9     10  "
                         ]
                     },
                     "metadata": {}
                 }
             ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 1,
+            "source": [
+                "teste <- 1\n",
+                "teste <- 2"
+            ],
+            "outputs": [],
             "metadata": {}
         }
     ],
