--- a/packages-modulesR.ipynb
+++ b/packages-modulesR.ipynb
@@ -13,7 +13,7 @@
             "source": [
                 "Packages <- c(\"ggplot2\", \"cowplot\", \"randomForest\", \"caret\", \"rpart.plot\", \"readxl\", \"DataExplorer\",\n",
                 "            \"AugmenterR\", \"readxl\", \"e1071\", \"smotefamily\", \"ROSE\", \"xgboost\", \"ROCR\", \"MASS\", \"lsr\",\n",
-                "            \"DescTools\", \"dplyr\", \"kernlab\", \"fastAdaboost\", \"dummies\", \"lattice\" )\n",
+                "            \"DescTools\", \"dplyr\", \"kernlab\", \"fastAdaboost\", \"dummies\", \"lattice\", \"modules\")\n",
                 "    \n",
                 "\n",
                 "install.packages(Packages)"
@@ -28,6 +28,42 @@
                 "lapply(Packages, library, character.only = TRUE)"
             ],
             "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Modules "
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 10,
+            "source": [
+                "m <- modules::use(\"modules/modules.R\")\n",
+                "m$foo2()"
+            ],
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": [
+                            "'foo2'"
+                        ],
+                        "text/latex": [
+                            "'foo2'"
+                        ],
+                        "text/markdown": [
+                            "'foo2'"
+                        ],
+                        "text/plain": [
+                            "[1] \"foo2\""
+                        ]
+                    },
+                    "metadata": {}
+                }
+            ],
             "metadata": {}
         }
     ],
