--- a/packages-modulesR.ipynb
+++ b/packages-modulesR.ipynb
@@ -39,10 +39,11 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 13,
             "source": [
                 "m <- modules::use(\"modules/modules.R\")\n",
-                "m$foo2()"
+                "m$foo2()\n",
+                "m$foox(3)"
             ],
             "outputs": [
                 {
@@ -59,6 +60,24 @@
                         ],
                         "text/plain": [
                             "[1] \"foo2\""
+                        ]
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": [
+                            "3"
+                        ],
+                        "text/latex": [
+                            "3"
+                        ],
+                        "text/markdown": [
+                            "3"
+                        ],
+                        "text/plain": [
+                            "[1] 3"
                         ]
                     },
                     "metadata": {}
